Add meeting minutes

--- a/meetings/2017-03-08.md
+++ b/meetings/2017-03-08.md
@@ -37,3 +37,24 @@
    * Working on parsing/displaying data from API proxy
  * Dispatch
 5. General questions
+
+## Minutes
+
+### Volunteer Compensation
+
+To make things easier for everybody, I'm going to calculate compensation at the end of March and send out cheques in early April. Let me know if you'd like to get paid sooner, or if you want an idea of how much money you'll be getting.
+
+### Roadmap
+
+We want to finish strong! I want to give everybody a chance to complete something substantial (whether it's a few small issues or one big project) before the term ends. Come talk to me if you're not working on something.
+
+We're likely going to wind things down when finals start, but I'll still be in the office on a regular basis until the end of May. **Everybody is encouraged to continue contributing throughout the summer.**
+
+### Team Updates
+
+- **Magazine** - we shipped at the start of reading week! Check out the final product here: https://www.ubyssey.ca/magazine/
+- **Elections Compass** - this went live on the first day of AMS Elections. Check it out here: https://www.ubyssey.ca/compass/
+- **Website team** - everybody is showing steady progress on small issues. Author pages are almost done!
+- **Analytics** - very close to MVP! We're hoping to have somthing to demo soon
+- **Dispatch** - making a push to finish the refactor by the end of April. Lots of great progress from everybody
+- **Chatbot** - making a push for MVP by April 20th
